# example-avs-oracle

./: Cargo.toml  DEMO.md  DEMO_LOCALNODE.md  README.md
contracts/oracle-price-verifier/: Cargo.toml
contracts/oracle-price-verifier/src/: contract.rs  state.rs
contracts/oracle-verifier-example/src/: contract.rs
contracts/oracle-verifier/src/: contract.rs  state.rs
crates/layer-wasi/: Cargo.toml
crates/layer-wasi/src/: lib.rs
oracle-example/: Cargo.toml  README.md
oracle-example/src/: lib.rs
oracle-verifier-example/: Cargo.toml
oracle-verifier-example/src/: contract.rs  error.rs  msg.rs  state.rs
oracle-verifier-example/src/tests/: common.rs  golem.rs  mod.rs
tools/cli/: .env  Cargo.toml
tools/cli/src/: args.rs  main.rs
tools/cli/src/commands/: deploy.rs  task_queue.rs  verifier.rs
