[workspace]
members = ["oracle-example", "oracle-verifier-example"]
resolver = "2"

[workspace.package]
edition       = "2021"
version       = "0.1.0"
license       = "MIT"
repository    = "https://github.com/Lay3rLabs/example-avs-oracle"
rust-version  = "1.78.0"

[workspace.dependencies]
anyhow        = "1"
layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", version = "0.1.0" }
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"
