[workspace]
members = ["contracts/*", "wasi/*", "tools/cli"]
resolver = "2"

[workspace.package]
edition       = "2021"
version       = "0.1.0"
license       = "MIT"
repository    = "https://github.com/Lay3rLabs/example-avs-oracle"
rust-version  = "1.78.0"

[workspace.dependencies]
anyhow        = "1"
layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", version = "0.1.0" }
cosmwasm-std     = "2.1.4"
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"

lavs-mock-operators = { path = "contracts/mock-operators" }
lavs-task-queue = { path = "contracts/task-queue" }
lavs-oracle-verifier = { path = "contracts/oracle-verifier" }

lavs-apis = { git = "https://github.com/Lay3rLabs/avs-toolkit.git", tag = "v0.1.2" }
layer-climb = { git = "https://github.com/Lay3rLabs/climb.git", rev = "5436381a7c35344325bd27ea32261ebcd2d76baa" }
layer-climb-cli = { git = "https://github.com/Lay3rLabs/climb.git", rev = "5436381a7c35344325bd27ea32261ebcd2d76baa" }

# mock-operator and task-queue
cosmwasm-schema  = "2.1.4"
cw-orch = "0.25.0"
cw-orch-core = "2"
cw-storage-plus  = "2.0.0"
cw-utils         = "2.0.0"
cw-controllers   = "2.0.0"
cw2              = "2.0.0"
schemars         = "0.8.17"
thiserror        = "1.0.59"
cw-multi-test = "0.20"
lavs-arch = { git = "https://github.com/Lay3rLabs/avs-toolkit.git", tag = "v0.1.2" }
lavs-orch = { git = "https://github.com/Lay3rLabs/avs-toolkit.git", tag = "v0.1.2" }

# dev deps
clap = { version = "4.5.1", features = ["derive", "env"] }

# tooling deps
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1.40"
dotenvy = {version = "0.15.7", features = ["cli"]}
tracing-subscriber = "0.3.18"
rand = "0.8"
deadpool = "0.12.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "blocking", "multipart"] }
sha2 = "0.10"
